add overview page for routerevisions
References #11004

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -138,3 +138,13 @@ login.error.text=You have probably used the wrong email or password. Please try 
 browser.too.old.warningTitle=Unsupported Browser
 browser.too.old.warning=Your browser is too old. We recommend an updated Google Chrome or Firefox. Or at least a newer version of Internet Explorer (>= 8).
 browser.too.old.popup.warning=You are using an unsupported browser!
+
+############################# routeRevisions.jsp
+routerevisions.page.title=IRIS - Route Revisions Management
+routerevision.terminal=Terminal
+routerevision.truckdistanceoneway=Truckdistance Oneway
+routerevision.tolldistanceoneway=Tolldistance Oneway
+routerevision.airlinedistance=Airline Distance
+routerevision.latitude=Latitude
+routerevision.longitude=Longitude
+routerevision.radius=Radius
