add create/update form for route revision
References #11004

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -148,3 +148,10 @@ routerevision.airlinedistance=Airline Distance
 routerevision.latitude=Latitude
 routerevision.longitude=Longitude
 routerevision.radius=Radius
+
+
+routerevision.create.title=Create Route Revision
+routerevision.update.title=Update Route Revision
+routerevision.terminal.name=Terminal
+routerevision.success.save.message=Route revision saved successfully.
+routerevision.success.update.message=Route revision updated successfully.
