Add Validation to route revision form
References #11004

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -42,6 +42,7 @@ page.navbar.terminalmanagement=Terminals
 page.navbar.seaportmanagement=Seaports
 page.navbar.connectionmanagement=Connections
 page.navbar.staticaddresses=Static Addresses
+page.navbar.routerevisions=Route Revisions
 page.navbar.trianglerouting=Triangular Traffic
 page.toTopScrollerToolTip=Back to top
 
@@ -155,3 +156,4 @@ routerevision.update.title=Update Route Revision
 routerevision.terminal.name=Terminal
 routerevision.success.save.message=Route revision saved successfully.
 routerevision.success.update.message=Route revision updated successfully.
+routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude.
