--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -157,3 +157,4 @@ routerevision.terminal.name=Terminal
 routerevision.success.save.message=Route revision saved successfully.
 routerevision.success.update.message=Route revision updated successfully.
 routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude.
+routerevision.table.filter.reset=Reset filter
