Add unit informations to route data revisions
References #11004

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -158,3 +158,6 @@ routerevision.success.save.message=Route revision saved successfully.
 routerevision.success.update.message=Route revision updated successfully.
 routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude.
 routerevision.table.filter.reset=Reset filter
+
+############################### units
+unit.meter=m
