Add unit information to route revision overview
References #11004

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -143,12 +143,12 @@ browser.too.old.popup.warning=You are using an unsupported browser!
 ############################# routeRevisions.jsp
 routerevisions.page.title=IRIS - Route Revisions Management
 routerevision.terminal=Terminal
-routerevision.truckdistanceoneway=Truckdistance Oneway
-routerevision.tolldistanceoneway=Tolldistance Oneway
-routerevision.airlinedistance=Airline Distance
+routerevision.truckdistanceoneway=Truckdistance Oneway(m)
+routerevision.tolldistanceoneway=Tolldistance Oneway(m)
+routerevision.airlinedistance=Airline Distance(m)
 routerevision.latitude=Latitude
 routerevision.longitude=Longitude
-routerevision.radius=Radius
+routerevision.radius=Radius(m)
 
 
 routerevision.create.title=Create Route Revision
