add comments for route data revisions
introduced tag for text areas

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -149,6 +149,7 @@ routerevision.airlinedistance=Airline Distance(m)
 routerevision.latitude=Latitude
 routerevision.longitude=Longitude
 routerevision.radius=Radius(m)
+routerevision.comment=Comment
 
 
 routerevision.create.title=Create Route Revision
