add visual feedback for remaining chars of comment field

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -37,6 +37,8 @@ form.backTitle=Back
 form.save=Save
 form.update=Update
 
+form.textarea.characters.remaining=characters remaining
+
 page.navbar.index=Startpage
 page.navbar.terminalmanagement=Terminals
 page.navbar.seaportmanagement=Seaports
