Add new route type BARGE_RAIL
refs #11564

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -126,6 +126,7 @@ triangle.page.title=Triangular Traffic
 route.type.barge=Barge
 route.type.rail=Rail
 route.type.truck=Truck
+route.type.bargerail=Barge-Rail
 
 
 ############################ login.jsp
