Add new field for barge distances to connection management
refs #11569

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -95,8 +95,9 @@ mainrunconnection.terminal.isenabled.true=(enabled)
 mainrunconnection.terminal.isenabled.false=(NOT enabled!)
 mainrunconnection.seaport.isenabled.true=(enabled)
 mainrunconnection.seaport.isenabled.false=(NOT enabled!)
-mainrunconnection.dieselDistance=Diesel km
-mainrunconnection.electricDistance=Electrical km
+mainrunconnection.bargeDieselDistance=Barge km
+mainrunconnection.railDieselDistance=Rail Diesel km
+mainrunconnection.railElectricDistance=Rail Electrical km
 mainrunconnection.create.title=Create new main run connection
 mainrunconnection.duplicate.connection.seaport=This combination of seaport... 
 mainrunconnection.duplicate.connection.terminal=... and terminal with ...
