--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -163,7 +163,7 @@ routerevision.update.title=Update Route Revision
 routerevision.terminal.name=Terminal
 routerevision.success.save.message=Route revision saved successfully.
 routerevision.success.update.message=Route revision updated successfully.
-routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude.
+routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude in the given validity range.
 routerevision.table.filter.reset=Reset filter
 
 ############################### units
