--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -164,6 +164,7 @@ routerevision.terminal.name=Terminal
 routerevision.success.save.message=Route revision saved successfully.
 routerevision.success.update.message=Route revision updated successfully.
 routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude in the given validity range.
+routerevision.validityrange=Invalid validity range.
 routerevision.table.filter.reset=Reset filter
 
 ############################### units
