adjust route revision naming of distances to correct units

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -147,9 +147,9 @@ browser.too.old.popup.warning=You are using an unsupported browser!
 ############################# routeRevisions.jsp
 routerevisions.page.title=IRIS - Route Revisions Management
 routerevision.terminal=Terminal
-routerevision.truckdistanceoneway=Truckdistance Oneway(m)
-routerevision.tolldistanceoneway=Tolldistance Oneway(m)
-routerevision.airlinedistance=Airline Distance(m)
+routerevision.truckdistanceoneway=Truckdistance Oneway(km)
+routerevision.tolldistanceoneway=Tolldistance Oneway(km)
+routerevision.airlinedistance=Airline Distance(km)
 routerevision.latitude=Latitude
 routerevision.longitude=Longitude
 routerevision.radius=Radius(m)
@@ -169,3 +169,4 @@ routerevision.table.filter.reset=Reset filter
 
 ############################### units
 unit.meter=m
+unit.kilometer=km
