Add address information to route revisions
Address information is updated on any route revision update.

refs #14392

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -156,6 +156,9 @@ routerevision.radius=Radius(m)
 routerevision.comment=Comment
 routerevision.validFrom=Valid from
 routerevision.validTo=Valid to
+routerevision.city=City
+routerevision.postalcode=Postal code
+routerevision.country=Country
 
 
 routerevision.create.title=Create Route Revision
