Search route revisions by terminal and address
refs #14393

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -159,6 +159,7 @@ routerevision.validTo=Valid to
 routerevision.city=City
 routerevision.postalcode=Postal code
 routerevision.country=Country
+routerevision.parameter.count=At least two search parameters need to be chosen
 
 
 routerevision.create.title=Create Route Revision
@@ -168,7 +169,7 @@ routerevision.success.save.message=Route revision saved successfully.
 routerevision.success.update.message=Route revision updated successfully.
 routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude in the given validity range.
 routerevision.validityrange=Invalid validity range.
-routerevision.table.filter.reset=Reset filter
+routerevision.reset=Reset
 
 ############################### units
 unit.meter=m
