Add csv file upload form to static address management

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -107,6 +107,7 @@ mainrunconnection.success.save.message = Main run connection saved successfully.
 mainrunconnection.success.edit.message = Main run connection updated successfully.
 
 staticaddress.page.title=IRIS - Static Addresses management
+staticaddress.page.import.title=IRIS - Static Addresses Import
 staticaddress.label.search=Search
 staticaddress.label.postalcode=Postalcode
 staticaddress.label.city=City
@@ -115,6 +116,10 @@ staticaddress.label.country=Country
 staticaddress.label.lat=Latitude
 staticaddress.label.lon=Longitude
 staticaddress.label.hashkey=Hashkey
+staticaddress.label.import=Import CSV
+staticaddress.label.import.file=CSV file
+staticaddress.label.import.mail=E-Mail address
+staticaddress.label.upload=Upload
 staticaddress.editmode.create=Create Static Address
 staticaddress.editmode.edit=Update Static Address
 staticaddress.error.duplicate=There is already a static address with same city, suburb and postalcode.
