Add route revision cleanup

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -176,6 +176,9 @@ routerevision.exists=There is already a Route revision for the same combination 
 routerevision.validityrange=Invalid validity range.
 routerevision.reset=Reset
 
+routerevision.cleanup.mail=E-Mail
+routerevision.cleanup=Cleanup
+
 ############################### units
 unit.meter=m
 unit.kilometer=km
