Introduce new connection type: DTRUCK

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -133,7 +133,7 @@ route.type.barge=Barge
 route.type.rail=Rail
 route.type.truck=Truck
 route.type.bargerail=Barge-Rail
-
+route.type.dtruck=Direct Truck
 
 ############################ login.jsp
 login.title=Login
