Searching for route revisions finds only non-expired entities by default
Default filter for the search functionality is "not expired" but the user
may switch to "expired only"

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -164,6 +164,9 @@ routerevision.city=City
 routerevision.postalcode=Postal code
 routerevision.country=Country
 routerevision.parameter.count=At least two search parameters need to be chosen
+routerevision.expirationFilter=Expiration
+routerevision.expirationFilter.notExpired=not expired
+routerevision.expirationFilter.expired=expired only
 
 
 routerevision.create.title=Create Route Revision
