Add country to terminal

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -60,6 +60,7 @@ terminal.create.title=Save terminal
 terminal.update.title=Update terminal
 terminal.name=Name
 terminal.region=Region
+terminal.country=Country
 terminal.enabled=Enabled
 terminal.metaInformation=Information
 terminal.success.save.message=Terminal saved successfully.
