Add coutnry distances to route revision

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -153,6 +153,7 @@ browser.too.old.popup.warning=You are using an unsupported browser!
 routerevisions.page.title=IRIS - Route Revisions Management
 routerevision.terminal=Terminal
 routerevision.truckdistanceoneway=Truckdistance Oneway(km)
+routerevision.distancesByCountry=Truckdistance Oneway by country
 routerevision.tolldistanceoneway=Tolldistance Oneway(km)
 routerevision.airlinedistance=Airline Distance(km)
 routerevision.latitude=Latitude
@@ -176,6 +177,7 @@ routerevision.terminal.name=Terminal
 routerevision.success.save.message=Route revision saved successfully.
 routerevision.success.update.message=Route revision updated successfully.
 routerevision.exists=There is already a Route revision for the same combination of terminal, latitude and longitude in the given validity range.
+routerevision.countryDistances.mismatch=Total one way truck distance and the sum of the one way truck distances of the countries mismatch.
 routerevision.validityrange=Invalid validity range.
 routerevision.reset=Reset
 
@@ -185,3 +187,15 @@ routerevision.cleanup=Cleanup
 ############################### units
 unit.meter=m
 unit.kilometer=km
+
+country.DE=Germany
+country.NL=Netherlands
+country.BE=Belgium
+country.LU=Luxembourg
+country.FR=France
+country.CH=Switzerland
+country.LI=Liechtenstein
+country.AT=Austria
+country.CZ=Czech Republic
+country.PL=Poland
+country.DK=Denmark
